--- a/PFR_Java/.classpath
+++ b/PFR_Java/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/pfr/Téléchargements/jar_files/jna-5.13.0.jar"/>
+	<classpathentry kind="lib" path="/home/pfr/pfr_code/Library/jar_files/jna-5.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
